docs: préparation complète pour déploiement en production
Revue de code complète et préparation du projet pour le déploiement
en production avec amélioration de la sécurité et documentation.

Nouvelles fonctionnalités:
- Implémentation JWT Authentication Filter
- Service UserDetailsService personnalisé
- Gestion globale des exceptions avec @RestControllerAdvice
- Configuration CORS via variables d'environnement
- Script de déploiement automatisé (deploy.sh)

Configuration production:
- Nouveau profil application-prod.properties sécurisé
- Variables d'environnement pour secrets (DB, JWT, CORS)
- Désactivation Swagger en production
- Désactivation SQL logging en production
- DDL-auto configuré en 'validate' pour production
- Dockerfile optimisé avec utilisateur non-root
- docker-compose.yml avec PostgreSQL et healthchecks

Documentation créée:
- README.md - Documentation complète du projet
- PRODUCTION_DEPLOYMENT_GUIDE.md - Guide de déploiement détaillé
- CODE_REVIEW_REPORT.md - Rapport d'audit complet
- DEPLOYMENT_SUMMARY.md - Résumé exécutif
- QUICK_COMMANDS.md - Commandes rapides de référence
- .env.example - Template de configuration

Améliorations sécurité:
- JWT filter pour validation des tokens sur chaque requête
- CORS configurable par environnement (plus de valeur hardcodée)
- Secrets externalisés (DB credentials, JWT secret)
- Exception handler global pour messages d'erreur cohérents
- .gitignore mis à jour (exclusion .env, logs, secrets)

Corrections bugs:
- Message de succès registration corrigé ("User registered successfully")

Fichiers créés:
- src/main/java/.../infrastructure/security/JwtAuthenticationFilter.java
- src/main/java/.../infrastructure/security/CustomUserDetailsService.java
- src/main/java/.../infrastructure/web/exception/GlobalExceptionHandler.java
- src/main/resources/application-prod.properties
- Dockerfile
- docker-compose.yml
- deploy.sh
- .env.example
- README.md
- PRODUCTION_DEPLOYMENT_GUIDE.md
- CODE_REVIEW_REPORT.md
- DEPLOYMENT_SUM